src/objects/MDM_Bulkupload__c.object
<CustomObject>
    <description>MDM_Bulkupload Raw rows from Bulk Upload</description>
    <fields>
        <fullName>Domain__c</fullName>
        <formula>TEXT(MDM_Source__r.Domain__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoldenRecordID__c</fullName>
        <description>Golden Record ID from MDM</description>
        <inlineHelpText>Golden Record ID from mdm</inlineHelpText>
        <label>Golden Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdFromSource__c</fullName>
        <description>IdFromSource</description>
        <inlineHelpText>IdFromSource</inlineHelpText>
        <label>IdFromSource</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsProcessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDM_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MDM_Source</label>
        <referenceTo>MDM_Source__c</referenceTo>
        <relationshipLabel>MDM_Bulkuploads</relationshipLabel>
        <relationshipName>BlkloadLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesTrak_GUID__c</fullName>
        <description>SalesTrak_GUID</description>
        <inlineHelpText>SalesTrak_GUID</inlineHelpText>
        <label>SalesTrak_GUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <label>Status_Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Various status of the upload record</description>
        <inlineHelpText>Various status of the upload record</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>NONE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>VALID RECORD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVALID ROW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVALID RECORD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Uploaded_Row_Original__c</fullName>
        <label>Uploaded_Row_Original</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>MDM_Bulkupload</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>IdFromSource__c</columns>
        <columns>MDM_Source__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Message__c</columns>
        <columns>IsProcessed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Bulk Up Load Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDM_Bulkuploads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>